<resources>
    <string name="app_name">RowCounter2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="button">+</string>
    <string name="textview">0</string>
    <string name="display_name">Toy Name</string>
    <string name="save_button">Save</string>
    <string name="Tcount">0</string>
    <string name="Transefrplus">+</string>
    <string name="args_test">0</string>
    <string name="db_count_num">TextView</string>
    <string name="db_observe">db_observe</string>
    <string name="Move">Move Back</string>
    <string name="clear_data">Clear</string>
    <string name="main_fragment">Основной фрагмент</string>
    <string name="service_text">Сервисное поле отображающее строку из БД</string>
    <string name="name_count">Счетчик</string>
    <string name="second_fragment">Дополнительный фрагмент</string>
</resources>