<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="xmlttitleViewModel"
            type="android.example.com.rowcounter2.TitleViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="android.example.com.rowcounter2.TitleFragment">

        <TextView
            android:id="@+id/count_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/count_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_name"
            app:layout_constraintVertical_bias="0.396" />

        <Button
            android:id="@+id/count_plus"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> xmlttitleViewModel.plusOne()}"
            android:text="@string/button"
            app:layout_constraintBaseline_toBaselineOf="@+id/count_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/count_display" />

        <TextView
            android:id="@+id/db_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{xmlttitleViewModel.counts.toString()}"
            android:textColor="#000000"
            app:chainUseRtl="false"
            app:layout_constraintBottom_toTopOf="@+id/clear_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.48000002" />

        <Button
            android:id="@+id/clear_data"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->xmlttitleViewModel.clearData()}"
            android:text="@string/clear_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/fragment_name"
            style="@style/Header"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/main_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count_display"
            app:layout_constraintVertical_bias="0.32999998" />

        <TextView
            android:id="@+id/name_count"
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_count"
            app:layout_constraintBottom_toTopOf="@+id/count_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_name"
            app:layout_constraintVertical_bias="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>